   * New settings in Options regarding "Min. duration" + "Max. duration"
   * New settings in Options regarding syntax coloring
   * Several other new subtitle formats
   * New settings in Options, center subtitle (in SE text boxes)
   * Tools -> Join subtitles (merge of multiple parts)
   * Tools -> Apply duration limits
   * Tools -> Sort -> Text - chars/sec
   * Will now display any errors found in SubRip/MicroDvd/SSA/ASS on load
   * File -> Statistics: Displays info about current subtitle
   * Click on status bar in footer will now show status history
   * "Fix common errors" item to fix Turkish ANSI letters to Unicode - thx Adem
   * Support for D-Cinema smpte - thx Lillian
   * Can now read NCI cap files - thx Ramon
   * Added fullscreen icon to video player (in main window only) - thx Leszek
   * Voikko spell check for Finnish - thx Harri + Ile
* IMPROVED:
   * Improved support for Advanced Substation Alpha (+ Substation Alpha)
   * Improved support for SAMI (now two different formats + font color support)
   * Added extra options for double click on list view line - thx Fredrik + TaeGyun
   * Added extra options for export as text
   * Added many new possible shortcut keys
   * Find and replace, better undo, faster + a little UI - thx Adem
   * Fix common errors -> Start with uppercase letter after colon/semicolon moved
     to seperate fix item (no longer in "Start with uppercase after paragraph/period")
   * Can now read Ulead format with positions - thx Steve
   * Can now convert text subtitles in mkv/mks files via command line - thx the hulk
   * New command line conversion parameters: /list, /overwrite, /inputfolder
   * File -> Export - can now choose custom video resolution + supports color 
* FIXED:
   * Auto-translate now works for English to Portuguese - thx w.tambley
   * Shortcuts with numbers (0-9)
   * Reading of Bluray sup with errors in image - thx Simon
   * Reading of SAMI files with time codes in quotes - thx Josh